--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,9 @@
             <option value="de">German</option>
             <option value="zh">Chinese</option>
             <option value="hi">Hindi</option>
+            <option value="te-IN">Telugu</option>
+            <option value="ta-LK">Tamil</option>
+            
         </select>
         
         <button onclick="translateSummary()">🔄 Translate</button>
